# SimpleICP

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
data/: 1.pcd  2.pcd
include/: P2PICP.hpp
src/: AMCL.cpp  P2PICP.cpp  main.cpp
